EXTRA_DIST = reconf configure
SUBDIRS = 

bin_PROGRAMS = squid_kerb_ldap

squid_kerb_ldap_SOURCES = squid_kerb_ldap.c support_group.c support_netbios.c support_member.c support_krb5.c support_ldap.c support_sasl.c support_resolv.c support_lserver.c

squid_kerb_ldap_LDFLAGS = 
squid_kerb_ldap_LDADD = 
